--- a/app/views/release/show.html.erb
+++ b/app/views/release/show.html.erb
@@ -1,7 +1,11 @@
 <div id="about" class="col-sm-12 col-md-12">
   <div class="release_title">
     <h2>Homosaurus v. <%= @release.release_identifier %> Updates</h2>
+    <% if @release.status != "Published" %>
+    <h3> Pending </h3>
+    <% else %>
     <h3>Released <%= @release.release_date %></h3>
+    <% end %>
   </div>
   <div class="info_section">
     <% @release.edit_requests.each do |er| %>
