--- a/app/views/vocabulary/_panel_display_language_partial.html.erb
+++ b/app/views/vocabulary/_panel_display_language_partial.html.erb
@@ -14,20 +14,11 @@
       <table width="100%">
         <% values.each do |value| %>
         <tr>
-          <td><%= value.split('@')[0] %></td>
-          <% if value.include?('@') %>
-            <% lang_id = value.split('@').last
-               lang_value = "English (USA)" if lang_id == 'en-US'
-               lang_value = "English (UK)" if lang_id == 'en-GB'
-               # lang_value ||= ISO_639.find_by_code(value.split('@').last)[3]
-               lang_value ||= Languages[value.split('@').last.to_sym].name
-            %>
-            <td width="100px;"><div class="well_language clear:both;">
-              <%= lang_value %>
-            </div></td>
-          <% else %>
-            <td>&nbsp;</td>
-          <% end %>
+          <td><%= value[1]  %></td>
+
+          <td width="100px;"><div class="well_language clear:both;">
+              <%= value[0] %>
+          </div></td>
         </tr>
         <% end %>
       </table>
