--- a/app/views/release/index.html.erb
+++ b/app/views/release/index.html.erb
@@ -1,20 +1,20 @@
 <div id="about" class="col-sm-12 col-md-12">
   <div class="release_title">
     <h2>Homosaurus Releases</h2>
-    <% if @releases.first.present? %>
-    <h3>Last Updated: <%= @releases.first.release_date %></h3>
-    <% end %>
   </div>
   <div class="info_section">
-    <p>
-      <ol>
-        <% @releases.each do |release| %>
-          <li>
-            <%= link_to "Homosaurus v.#{release.release_identifier} (#{release.release_date})", release_show_path(:release_id => release.release_identifier) %>
-          </li>
-        <% end %>
-      </ol>
-    </p>
+    <ul class="list-group list-group-flush">
+      <% @releases.each do |release| %>
+      <li class="list-group-item">
+	<% link_name = "Homosaurus v.#{release.release_identifier} (#{release.release_date})"
+	   if current_user.present?
+	     link_name += " [#{release.status}]"
+	   end
+	   %>
+        <%= link_to link_name, release_show_path(:release_id => release.release_identifier) %>
+      </li>
+      <% end %>
+    </ul>
   </div>
 
 </div>
