--- a/app/views/vocabulary/show.html.erb
+++ b/app/views/vocabulary/show.html.erb
@@ -1,4 +1,15 @@
+<%
+  form_class = "btn p-0"
+  editing_disabled = (VersionRelease.where(status: "Pending").count == 0)
+  latest_vr_id = VersionRelease.where(status: "Published")[-1].id
+  if @homosaurus_obj.visibility == "pending"
+    latest_vr_id = VersionRelease.last.id
+  end
+  vr_relations = @homosaurus_obj.get_relationships_at_version_release(latest_vr_id, full_lang = true)
+  %>
+
 <h2><%= @homosaurus_obj.pref_label %> (<%= @homosaurus_obj.uri %>)</h2>
+<h3>Last Edited: V. <%= @homosaurus_obj.get_edit_requests()[0].version_release.release_identifier %></h3>
 <% if @homosaurus_obj.visibility == "deleted" %>
   <div class="alert alert-danger" role="alert">
     This term has been removed from the vocabulary and is no longer in use.<br />
@@ -11,23 +22,25 @@
 <% end %>
 <p><div style="clear:both;">
   <% if params[:from_q].present? %>
-      <%= button_to "Back To Search Results", vocabulary_search_results_path(id: @homosaurus_obj.vocabulary_identifier), :method => "get", class: 'btn btn-outline-secondary', style:"float:left;", params: { :q=>params[:from_q]} %>
+      <%= button_to "Back To Search Results", vocabulary_search_results_path(id: @homosaurus_obj.vocabulary_identiffier), :method => "get", form_class: form_class, class: 'btn btn-outline-secondary', style:"float:left;", params: { :q=>params[:from_q]} %>
   <% else %>
-      <%= button_to "Back To Index", vocabulary_index_path(id: @homosaurus_obj.vocabulary_identifier), :method => "get", class: 'btn btn-outline-secondary', style:"float:left; margin-left:20px;" %>
+      <%= button_to "Back To Index", vocabulary_index_path(id: @homosaurus_obj.vocabulary_identifier), :method => "get", form_class: form_class, class: 'btn btn-outline-secondary' %>
   <% end %>
-  <%= button_to "View History", vocabulary_term_history_path(vocab_id: @homosaurus_obj.vocabulary_identifier, id: @homosaurus_obj.identifier), :method => "get", class: 'btn btn-outline-secondary', style:"float:left; margin-left:20px;" %>
-  <%= button_to "View Discussion", vocabulary_term_discussion_path(vocab_id: @homosaurus_obj.vocabulary_identifier, id: @homosaurus_obj.identifier), :method => "get", class: 'btn btn-outline-secondary', style:"float:left; margin-left:20px;" %>
+  <%= button_to "View History", vocabulary_term_history_path(vocab_id: @homosaurus_obj.vocabulary_identifier, id: @homosaurus_obj.identifier), :method => "get", form_class: form_class, class: "btn btn-outline-secondary" %>
+  <% if current_user.present? %>
+    <%= button_to "View Discussion", vocabulary_term_discussion_path(vocab_id: @homosaurus_obj.vocabulary_identifier, id: @homosaurus_obj.identifier), :method => "get", form_class: form_class, class: 'btn btn-outline-secondary' %>
+  <% end %>
   <% if current_user.present? && current_user.contributor? && request.original_url.include?('/v3') %>
-    <%= button_to "Edit Term", vocabulary_term_edit_path(vocab_id: "v3", id: @homosaurus_obj.identifier), :method => "get", class: 'btn btn-outline-secondary', style:"float:left; margin-left:20px;" %>
+      <%= button_to "Edit Term", vocabulary_term_edit_path(vocab_id: "v3", id: @homosaurus_obj.identifier), :method => "get", form_class: "#{form_class} btn-tooltip", class: 'btn btn-outline-secondary', disabled: editing_disabled, form: { "title" => editing_disabled ? "No pending releases" : ""} %>
     <% if @homosaurus_obj.visibility == "deleted" %>
-      <%= button_to "Restore Term", vocabulary_term_restore_path(vocab_id: "v3", id: @homosaurus_obj.identifier),  :method => "get", class: 'btn btn-danger',  data: { confirm: "Are you sure you want to restore #{@homosaurus_obj.pref_label}?" }, style:"float:left; margin-left:20px;" %>
+      <%= button_to "Restore Term", vocabulary_term_restore_path(vocab_id: "v3", id: @homosaurus_obj.identifier),  :method => "get", form_class: form_class, class: 'btn btn-danger',  data: { confirm: "Are you sure you want to restore #{@homosaurus_obj.pref_label}?" } %>
     <% elsif @homosaurus_obj.visibility == "pending" %>
-      <%= button_to "Delete Pending Term", vocabulary_term_delete_version_path(vocab_id: "v3", id: @homosaurus_obj.identifier),  :method => :delete, class: 'btn btn-danger',  data: { confirm: "Are you sure you want to delete the unpublished #{@homosaurus_obj.pref_label}?" }, style:"float:left; margin-left:20px;" %>
+      <%= button_to "Delete Pending Term", vocabulary_term_delete_version_path(vocab_id: "v3", id: @homosaurus_obj.identifier),  :method => :delete, form_class: form_class, class: 'btn btn-danger',  data: { confirm: "Are you sure you want to delete the unpublished #{@homosaurus_obj.pref_label}?" } %>
     <% else %>
-      <%= button_to "Delete Term", vocabulary_term_delete_path(vocab_id: "v3", id: @homosaurus_obj.identifier),  :method => :delete, class: 'btn btn-danger',  data: { confirm: "Are you sure you want to delete #{@homosaurus_obj.pref_label}?" }, style:"float:left; margin-left:20px;" %>
+      <%= button_to "Delete Term", vocabulary_term_delete_path(vocab_id: "v3", id: @homosaurus_obj.identifier),  :method => :delete, form_class: form_class, class: 'btn btn-danger',  data: { confirm: "Are you sure you want to delete #{@homosaurus_obj.pref_label}?" } %>
     <% end %>
     <% if @homosaurus_obj.visibility != "pending" %>
-      <input class="btn btn-danger" style="float:left; margin-left:20px;" type="button" value="Replace Other Term" onClick='var identifer = prompt("Enter the identifier of the term to replace with this term. This OTHER TERM will redirect to this record."); window.location="/<%=@homosaurus_obj.vocabulary_identifier%>/<%=@homosaurus_obj.identifier%>/replace/" + identifer;'>
+      <input class="btn btn-danger" type="button" value="Replace Other Term" onClick='var identifer = prompt("Enter the identifier of the term to replace with this term. This OTHER TERM will redirect to this record."); window.location="/<%=@homosaurus_obj.vocabulary_identifier%>/<%=@homosaurus_obj.identifier%>/replace/" + identifer;'>
     <% end %>
   <% end %>
 
@@ -44,29 +57,28 @@
 
 <%= render :partial => "panel_display_language_partial", :locals =>
     {:title => Term.getLabel("prefLabel"),
-     :values=>[@homosaurus_obj.pref_label_language]}
+     :values=>vr_relations[Relation::Pref_label]}
 %>
 
 <%= render :partial => "panel_display_language_partial", :locals =>
     {:title => Term.getLabel("label"),
-     :values=>@homosaurus_obj.labels_language}
+     :values=>vr_relations[Relation::Label]}
 %>
 
 <%= render :partial => "panel_display_language_partial", :locals =>
     {:title => Term.getLabel("altLabel"),
-     :values=>@homosaurus_obj.alt_labels_language}
+     :values=>vr_relations[Relation::Alt_label]}
 %>
 
-<%= render :partial => "panel_display_partial", :locals =>
+<%= render :partial => "panel_display_language_partial", :locals =>
     {:title => Term.getLabel("description"),
-     :values=>[@homosaurus_obj.description]}
+     :values=>vr_relations[Relation::Description]}
 %>
 
 <%= render :partial => "panel_display_partial", :locals =>
     {:title => Term.getLabel("historyNote"),
      :values=>[@homosaurus_obj.history_note]}
 %>
-
 
 <%= render :partial => "internal_panel_display_partial", :locals =>
     {:title => Term.getLabel("internalNote"),
@@ -90,17 +102,17 @@
 
 <%= render :partial => "panel_display_relation_partial", :locals =>
     {:title => Term.getLabel("broader"),
-     :values=>@homosaurus_obj.broader}
+     :values=>vr_relations[Relation::Broader]}
 %>
 
 <%= render :partial => "panel_display_relation_partial", :locals =>
     {:title => Term.getLabel("related"),
-     :values=>@homosaurus_obj.related}
+     :values=>vr_relations[Relation::Related]}
 %>
 
 <%= render :partial => "panel_display_relation_partial", :locals =>
     {:title => Term.getLabel("narrower"),
-     :values=>@homosaurus_obj.narrower}
+     :values=>vr_relations[Relation::Narrower]}
 %>
 
 <%= render :partial => "panel_display_partial", :locals =>
